# crewai-seo-audit

./: README.md  pyproject.toml
data/: exportmagicmorning.json
src/seo_audit_crew/: crew.py  main.py
src/seo_audit_crew/config/: agents.yaml  tasks.yaml
src/seo_audit_crew/tools/: csv_to_json.py
