[project]
name = "seo_audit_crew"
version = "0.1.0"
description = "seo_audit_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
seo_audit_crew = "seo_audit_crew.main:run"
run_crew = "seo_audit_crew.main:run"
train = "seo_audit_crew.main:train"
replay = "seo_audit_crew.main:replay"
test = "seo_audit_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
